--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,82 @@
+arabic-reshaper==2.1.3
 asgiref==3.4.1
+attrs==21.4.0
+autobahn==21.11.1
+Automat==20.2.0
 autopep8==1.6.0
+backports.entry-points-selectable==1.1.1
+Brotli==1.0.9
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.11
 cloudinary==1.28.1
+constantly==15.1.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.1
+cssselect2==0.4.1
+defusedxml==0.7.1
+distlib==0.3.4
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.0.1
 django-ckeditor==6.2.0
+django-cors-headers==3.10.1
 django-environ==0.8.1
 django-heroku==0.0.0
 django-js-asset==1.2.2
+django-social-share==2.2.1
+django-templated-mail==1.1.1
+djangorestframework==3.13.1
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+filelock==3.4.0
+fontawesomefree==6.0.0
+fonttools==4.29.1
+future==0.18.2
 gunicorn==20.1.0
+html5lib==1.1
+hyperlink==21.0.0
 idna==3.3
+incremental==21.3.0
+itypes==1.2.0
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+oauthlib==3.1.1
 Pillow==9.0.0
+platformdirs==2.4.0
 psycopg2-binary==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.8.0
+pycparser==2.21
+pydyf==0.1.2
+PyJWT==2.3.0
+pyOpenSSL==21.0.0
+PyPDF2==1.26.0
+pyphen==0.12.0
+python-bidi==0.4.2
+python3-openid==3.2.0
+pytz==2021.3
+reportlab==3.6.7
 requests==2.27.1
+requests-oauthlib==1.3.0
+service-identity==21.1.0
 six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.1.0
 sqlparse==0.4.2
+tinycss2==1.1.1
 toml==0.10.2
+Twisted==21.7.0
+txaio==21.2.1
+typing_extensions==4.0.1
+uritemplate==4.1.1
 urllib3==1.26.8
-whitenoise==5.3.0c
+virtualenv==20.10.0
+weasyprint==54.1
+webencodings==0.5.1
+whitenoise==5.3.0
+xhtml2pdf==0.2.5
+zope.interface==5.4.0
+zopfli==0.1.9
